compiler/tests/en/errors/default_arg_type.salam
// EXPECT: E002
func bad(a : int, label : str = 5):
    println(a, label)
end

func main:
    bad(1)
end
